@@ -1,3 +1,5 @@
+* Consecutive groups with the same HMTL mode are applied at once without intermediate renders (where possible) to improve performance (#126).
+
 v2.2.0 (2018-03-19)
 * The "Apply automatic substitutions on page load" item in the Tools menu is correctly initialized.
 * Column widths and order are saved.
